force-app/main/default/objects/Krow__Task_Checklist__c/Krow__Task_Checklist__c.object-meta.xml
<CustomObject>
    <label>Task Checklist</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Task Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>