force-app/main/default/objects/Krow__Task_Checklist__c/fields/Krow__ClonedCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Krow__ClonedCreatedDate__c</fullName>
    <label>ClonedCreatedDate</label>
    <type>DateTime</type>
</CustomField>