force-app/main/default/objects/Krow__Task_Checklist__c/fields/Krow__Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Krow__Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Task_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>