force-app/main/default/objects/Krow__Task_Checklist__c/fields/Krow__Completed_On__c.field-meta.xml
<CustomField>
    <fullName>Krow__Completed_On__c</fullName>
    <label>Completed On</label>
    <type>Date</type>
</CustomField>