force-app/main/default/objects/Krow__Task_Checklist__c/fields/Krow__Is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Krow__Is_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Completed</label>
    <type>Checkbox</type>
</CustomField>