force-app/main/default/objects/Krow__Task_Checklist__c/fields/Krow__Krow_Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Krow_Task__c</fullName>
    <label>Klient Task</label>
    <referenceTo>Krow__Task__c</referenceTo>
    <relationshipLabel>Task Checklists</relationshipLabel>
    <relationshipName>Task_Checklists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>